--- a/new1.html
+++ b/new1.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Duan3</title>
+    <title>News</title>
 </head>
 <body>
-<h1> Luân Thành</h1>
-<h1> Sửa đổi lần 1</h1>
-<h1> Sửa đổi lần 2</h1>
+<h1>News</h1> 
 </body>
 </html>
