--- a/about.html
+++ b/about.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News</title>
+    <title>About</title>
 </head>
 <body>
-<h1>News 1</h1>
-<h1>News 2</h1>
+<h1>About</h1>
+<h1>About2</h1>
 
 </body>
 </html>
