4. Cap nhat lan 4

--- a/about.html
+++ b/about.html
@@ -6,8 +6,11 @@
     <title>About</title>
 </head>
 <body>
-<h1>About</h1>
-<h1>About2</h1>
-
+<a href="./index.html">Home</a>
+<a href="./about.html">About</a>
+<a href="./new1.html">new</a>
+<h1>About 1</h1>
+<h1>About 2</h1>
+<h1>About 2</h1>
 </body>
 </html>
