--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <title>Duan3</title>
 </head>
 <body>
-<h1> Luân Thành</h1>
-<h1> Sửa đổi lần 1</h1>
-<h1> Sửa đổi lần 2</h1>
-<h1> Sửa đổi lần 3</h1>
+<a href="./index.html">Home</a>
+<a href="./about.html">About</a>
+<a href="./new1.html">new</a>
 </body>
 </html>
