--- a/new.html
+++ b/new.html
@@ -6,8 +6,11 @@
     <title>News</title>
 </head>
 <body>
-<h1>News 1</h1>
-<h1>News 2</h1>
-
+<a href="./index.html">Home</a>
+<a href="./about.html">About</a>
+<a href="./new1.html">new</a>
+<h1>New 1</h1>
+<h1>New 2</h1>
+<h1>New 3</h1>
 </body>
 </html>
