5. Cap nhat lan 5

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 <body>
 <a href="./index.html">Home</a>
 <a href="./about.html">About</a>
-<a href="./new1.html">new</a>
+<a href="./new.html">new</a>
 <h1>About 1</h1>
 <h1>About 2</h1>
 <h1>About 2</h1>
