--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 <a href="./index.html">Home</a>
 <a href="./about.html">About</a>
-<a href="./new1.html">new</a>
+<a href="./new.html">new</a>
+<h1>Dự án 4</h1>
 </body>
 </html>
