--- a/new.html
+++ b/new.html
@@ -8,7 +8,7 @@
 <body>
 <a href="./index.html">Home</a>
 <a href="./about.html">About</a>
-<a href="./new1.html">new</a>
+<a href="./new.html">new</a>
 <h1>New 1</h1>
 <h1>New 2</h1>
 <h1>New 3</h1>
